<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/upsdk_margin_l"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnASR"
        android:layout_marginTop="@dimen/upsdk_margin_l"
        android:text="@string/asr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGeneralCard"
        android:layout_below="@+id/btnASR"
        android:layout_marginTop="@dimen/upsdk_margin_l"
        android:text="@string/general_card_recognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btnFaceDetect"
        android:layout_below="@+id/btnGeneralCard"
        android:layout_marginTop="@dimen/upsdk_margin_l"
        android:text="@string/face_detect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>