<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/upsdk_margin_l"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewTitle"
        style="@style/TextViewStyle"
        android:text="@string/huawei_location_kit"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRequestLocation"
        android:layout_below="@+id/txtViewTitle"
        android:layout_marginTop="@dimen/upsdk_margin_l"
        android:text="@string/request_location_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRemoveLocation"
        android:layout_below="@+id/btnRequestLocation"
        android:layout_marginTop="@dimen/upsdk_margin_l"
        android:text="@string/remove_location_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtLogs"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/upsdk_margin_l"
        android:gravity="start"
        android:scrollbars = "vertical"
        android:layout_below="@+id/btnRemoveLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>